--- a/ensemble/EnsembleValidation.ipynb
+++ b/ensemble/EnsembleValidation.ipynb
@@ -150,11 +150,11 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "prediction_LightGBM = pd.read_csv(\"path_to_your_csv_file_1.csv\")\n",
+    "prediction_LightGBM = pd.read_csv(\"prediction1.csv\")\n",
     "\n",
-    "prediction_others1 = pd.read_csv(\"path_to_your_csv_file_3.csv\")\n",
-    "prediction_others2 = pd.read_csv(\"path_to_your_csv_file_4.csv\")\n",
-    "prediction_others3 = pd.read_csv(\"path_to_your_csv_file_5.csv\")\n",
+    "prediction_others1 = pd.read_csv(\"prediction2.csv\")\n",
+    "prediction_others2 = pd.read_csv(\"prediction3.csv\")\n",
+    "prediction_others3 = pd.read_csv(\"prediction4.csv\")\n",
     "\n",
     "predictions = [prediction_LightGBM, prediction_DNN, prediction_others1, prediction_others2, prediction_others3]\n",
     "\n",
